[package]
name = "raycaster-cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
cgmath = "0.18.0"
env_logger = "0.10.0"
error-iter = "0.4.1"
getrandom = "0.2.8"
image = "0.24.6"
line_drawing = "1.0.0"
log = "0.4.17"
pixels = "0.12"
randomize = "3.0.1"
winit = "0.28.3"
winit_input_helper = "0.14.1"
